--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,21 +1,4 @@
-*,
-*:after,
-*:before {
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 20px;
-}
-
-body {
-  padding: 10px;
-  background: #2C3E50;
-  font-size: 20px;
-}
-
-/* Componet card */
-@import "card/card.scss";
-
 @import "../components/bootstrap/scss/bootstrap";
+@import "../components/font-awesome/scss/font-awesome";
+
 
